--- a/package.json
+++ b/package.json
@@ -1,34 +1,1 @@
-{
-  "name": "google-keep-clone",
-  "homepage": "https://Vibhukumar10.github.io/Google-Keep-Clone",
-  "version": "1.0.0",
-  "description": "",
-  "keywords": [],
-  "main": "src/index.js",
-  "dependencies": {
-    "@material-ui/core": "4.6.1",
-    "@material-ui/icons": "4.5.1",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "react-scripts": "3.2.0",
-    "uuid": "3.3.3"
-  },
-  "devDependencies": {
-    "gh-pages": "^3.2.3",
-    "typescript": "3.3.3"
-  },
-  "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
-}
+{"name": "google-keep-clone", "homepage": "https://Vibhukumar10.github.io/Google-Keep-Clone", "version": "1.0.0", "description": "", "keywords": [], "main": "src/index.js", "dependencies": {"@material-ui/core": "4.6.1", "@material-ui/icons": "4.5.1", "react": "21.8.6", "react-dom": "16.8.6", "react-scripts": "3.2.0", "uuid": "3.3.3"}, "devDependencies": {"gh-pages": "^3.2.3", "typescript": "3.3.3"}, "scripts": {"predeploy": "npm run build", "deploy": "gh-pages -d build", "start": "react-scripts start", "build": "react-scripts build", "test": "react-scripts test --env=jsdom", "eject": "react-scripts eject"}, "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]}
